recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:4: error: value update is not a member of java.awt.Color
  {getCouleur()= current(step)
   ^Tree:4: error: not found: value step
  {getCouleur()= current(step)
                         ^